# raytracer

./: .gitignore  Cargo.toml  README.md  flake.nix
raytracer_gpu/: Cargo.toml
raytracer_gpu/src/: camera.rs  compute.wgsl  cube.rs  lib.rs  main.rs  material.rs  render.wgsl  renderer.rs  scenes.rs  sphere.rs  uniform_buffer.rs
raytracer_gpu/src/shaders/: compute.wgsl  render.wgsl
raytracer_headless/: Cargo.toml
raytracer_headless/src/: main.rs
raytracer_runtime/: Cargo.toml
raytracer_runtime/src/: main.rs
raytracer_terminal/: Cargo.toml
raytracer_terminal/src/: camera_controller.rs  framebuffer.rs  lib.rs  main.rs  terminal_rendering.rs
src/: bvh.rs  camera.rs  lib.rs  main.rs  materials.rs  math.rs  renderer.rs  scene.rs  scenes.rs  shapes.rs
src/shapes/: cube.rs  mod.rs  sphere.rs
