[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
image = { workspace = true }

[workspace]
members = ["raytracer_headless", "raytracer_runtime", "raytracer_gpu", "raytracer_terminal"]

[workspace.dependencies]
num-traits = "0.2.19"
rand = "0.10"
rayon = "1.11"
image = "0.25.9"

